2007-07-30  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/registry.py:
	Add compound-property support: add RegistryEntryCompoundProperty
	class and parsing methods, update property parsing methods to look
	for 'compound-property'; modify RegistryWriter to print nested
	compound and simple properties properly.

	* flumotion/test/test_registry.py:
	Add test cases for compound properties.

2007-07-27  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/component.py: Don't import sys.

	* flumotion/admin/admin.py (AdminModel): This is a changelog for
	the last change to admin.py. It makes the AdminModel not be a
	gobject. It does not change the admin's interface. Apologies for
	the fuckups!

	* flumotion/common/signals.py (SignalMixin.emit): Iterate over a
	list copy.

	* flumotion/test/test_common_signals.py
	(TestSignalMixin.testDisconnect):
	* flumotion/common/signals.py (SignalMixin.connect): Return the
	signal ID.

	* flumotion/common/signals.py (SignalMixin.emit): 
	* flumotion/test/test_common_signals.py
	(TestSignalMixin.testEmitSelf): Er, check to make sure that
	emitting also passes the self object.

	* bin/flumotion-admin.in: Don't import gstreamer, we don't use it.

	* data/glade/admin-wizard.glade:
	* data/glade/spyglass.glade:
	* data/glade/videotest.glade:
	* data/glade/wizard.glade:
	* data/glade/wizard_audiotest.glade:
	* data/glade/wizard_disk.glade:
	* data/glade/wizard_encoding.glade:
	* data/glade/wizard_overview.glade:
	* data/glade/wizard_shout2.glade:
	* data/glade/wizard_smoke.glade:
	* data/glade/wizard_soundcard.glade:
	* data/glade/wizard_source.glade:
	* data/glade/wizard_summary.glade:
	* data/glade/wizard_testsource.glade:
	* data/glade/wizard_theora.glade:
	* data/glade/wizard_tvcard.glade:
	* data/glade/wizard_vorbis.glade: Don't require gnome libs, we
	don't use them.

2007-07-27  Andy Wingo  <wingo@pobox.com>

	* bin/flumotion-admin.in: Don't import gstreamer.

	* flumotion/component/consumers/httpstreamer/http.py